--- a/subtablesexcel.ipynb
+++ b/subtablesexcel.ipynb
@@ -153,99 +153,41 @@
     }
    ],
    "source": [
-    "from openpyxl import load_workbook\n",
-    "from openpyxl.styles import Font, Border, Side\n",
-    "from openpyxl.worksheet.table import Table, TableStyleInfo\n",
+    "import pandas as pd\n",
     "\n",
-    "# Load the workbook\n",
-    "workbook = load_workbook(\"sam.xlsx\")\n",
+    "# Load the Excel file into a DataFrame\n",
+    "df = pd.read_excel(\"your_workbook.xlsx\")\n",
     "\n",
-    "# Define font and border styles\n",
-    "header_font = Font(bold=True)\n",
-    "header_border = Border(bottom=Side(style='medium'))\n",
-    "table_border = Border(outline=True, right=Side(style='thin'), bottom=Side(style='thin'))\n",
+    "# Group records by 'RT', 'Country', and 'City'\n",
+    "grouped = df.groupby(['RT', 'Country', 'City'])\n",
     "\n",
-    "# Define table style\n",
-    "table_style = TableStyleInfo(name=\"TableStyleMedium9\", showFirstColumn=False,\n",
-    "                              showLastColumn=False, showRowStripes=True, showColumnStripes=True)\n",
+    "# Create a new DataFrame to store the results\n",
+    "result = pd.DataFrame(columns=['GCB', 'Country', 'City', 'Justify', 'Proposal'])\n",
     "\n",
-    "# Iterate through each sheet in the workbook\n",
-    "for sheet in workbook:\n",
-    "    # Find the index of the 'RT' column\n",
-    "    rt_column_index = None\n",
-    "    for col_idx in range(1, sheet.max_column + 1):\n",
-    "        if sheet.cell(row=1, column=col_idx).value == 'RT':\n",
-    "            rt_column_index = col_idx\n",
-    "            break\n",
+    "# Iterate through each group\n",
+    "for name, group in grouped:\n",
+    "    # Group records by 'GCB' value and count the occurrences\n",
+    "    gcb_counts = group['GCB'].value_counts()\n",
+    "    \n",
+    "    # Iterate through each 'GCB' value and count\n",
+    "    for gcb, count in gcb_counts.items():\n",
+    "        # Concatenate 'Justify' values\n",
+    "        justify = ', '.join(group['justify'])\n",
+    "        \n",
+    "        # Create a new row with the aggregated values\n",
+    "        new_row = {\n",
+    "            'GCB': f\"{count}*{gcb}\",\n",
+    "            'Country': name[1],\n",
+    "            'City': name[2],\n",
+    "            'Justify': justify,\n",
+    "            'Proposal': ''  # Initialize 'Proposal' column with empty string\n",
+    "        }\n",
+    "        \n",
+    "        # Append the new row to the result DataFrame\n",
+    "        result = result.append(new_row, ignore_index=True)\n",
     "\n",
-    "    # If 'RT' column found\n",
-    "    if rt_column_index:\n",
-    "        # Collect unique values from the 'RT' column\n",
-    "        unique_values = set(sheet.cell(row=row_idx, column=rt_column_index).value\n",
-    "                             for row_idx in range(2, sheet.max_row + 1))\n",
-    "\n",
-    "        # Create a list to store sub-tables\n",
-    "        sub_tables = []\n",
-    "\n",
-    "        # Create sub-tables for each unique 'RT' value\n",
-    "        for rt_value in unique_values:\n",
-    "            sub_table = []  # Initialize sub-table\n",
-    "\n",
-    "            # Copy headers from the main table\n",
-    "            header_row = []\n",
-    "            for col_idx in range(1, sheet.max_column + 1):\n",
-    "                header = sheet.cell(row=1, column=col_idx).value\n",
-    "                header_row.append(header)\n",
-    "            sub_table.append(header_row)\n",
-    "\n",
-    "            # Add heading for the sub-table\n",
-    "            heading = [f\"Sub-table for '{rt_value}'\"]\n",
-    "            sub_table.append(heading)\n",
-    "\n",
-    "            # Copy rows matching 'RT' value to sub-table\n",
-    "            for row_idx in range(2, sheet.max_row + 1):\n",
-    "                if sheet.cell(row=row_idx, column=rt_column_index).value == rt_value:\n",
-    "                    sub_row = [sheet.cell(row=row_idx, column=col_idx).value for col_idx in range(1, sheet.max_column + 1)]\n",
-    "                    sub_table.append(sub_row)\n",
-    "\n",
-    "            # Add sub-table to the list\n",
-    "            sub_tables.append(sub_table)\n",
-    "\n",
-    "        # Clear the original sheet\n",
-    "        sheet.delete_rows(1, sheet.max_row)\n",
-    "\n",
-    "        # Add sub-tables to the sheet\n",
-    "        for sub_table_idx, sub_table in enumerate(sub_tables):\n",
-    "            # Append rows of the sub-table\n",
-    "            for sub_row_idx, sub_row in enumerate(sub_table):\n",
-    "                sheet.append(sub_row)\n",
-    "\n",
-    "            # Apply formatting to the header row of the first sub-table\n",
-    "            if sub_table_idx == 0:\n",
-    "                for cell in sheet.iter_rows(min_row=1, max_row=1, max_col=sheet.max_column):\n",
-    "                    for header_cell in cell:\n",
-    "                        header_cell.font = header_font\n",
-    "                        header_cell.border = header_border\n",
-    "\n",
-    "            # Apply borders to all cells within the sub-table\n",
-    "            for row_idx in range(1, len(sub_table) + 1):\n",
-    "                for col_idx in range(1, sheet.max_column + 1):\n",
-    "                    cell = sheet.cell(row=row_idx, column=col_idx)\n",
-    "                    cell.border = table_border\n",
-    "\n",
-    "            # Insert space of 2 rows between sub-tables\n",
-    "            if sub_table_idx < len(sub_tables) - 1:\n",
-    "                sheet.insert_rows(sheet.max_row + 1, amount=2)\n",
-    "\n",
-    "            # Create a table for the sub-table\n",
-    "            table_name = f\"Table_{sheet.title}_{sub_table_idx}\"  # Unique table name\n",
-    "            table = Table(displayName=table_name, ref=sheet.dimensions)\n",
-    "            table.tableStyleInfo = table_style\n",
-    "            print(f\"{table_name} in sheet {sheet.title}\")\n",
-    "            sheet.add_table(table)\n",
-    "\n",
-    "# Save the modified workbook\n",
-    "workbook.save(\"modified_workbook.xlsx\")\n"
+    "# Save the result to a new Excel file\n",
+    "result.to_excel(\"result.xlsx\", index=False)\n"
    ]
   },
   {
