--- a/subtablesexcel.ipynb
+++ b/subtablesexcel.ipynb
@@ -376,6 +376,51 @@
     "    # Save the new workbook\n",
     "    new_wb.save()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f17bbb6e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from openpyxl import load_workbook\n",
+    "\n",
+    "# Function to read data from another Excel file and return as DataFrame\n",
+    "def read_data(file_path, sheet_name):\n",
+    "    workbook = load_workbook(file_path)\n",
+    "    df = pd.read_excel(workbook[sheet_name], engine='openpyxl')\n",
+    "    return df\n",
+    "\n",
+    "# Load the main workbook with subtables\n",
+    "main_workbook = load_workbook(\"main_workbook.xlsx\")\n",
+    "\n",
+    "# Load the additional workbook\n",
+    "additional_workbook = load_workbook(\"additional_workbook.xlsx\")\n",
+    "\n",
+    "# Get the sheet names from the main workbook\n",
+    "sheet_names = main_workbook.sheetnames\n",
+    "\n",
+    "# Iterate through each sheet in the main workbook\n",
+    "for sheet_name in sheet_names:\n",
+    "    # Read data from the additional workbook\n",
+    "    additional_df = read_data(\"additional_workbook.xlsx\", sheet_name)\n",
+    "    \n",
+    "    # Read data from the main workbook\n",
+    "    main_df = pd.read_excel(main_workbook[sheet_name], engine='openpyxl')\n",
+    "    \n",
+    "    # Determine the row index where the subtables start\n",
+    "    subtable_start_row = len(additional_df) + 3  # Assuming 3 rows gap between additional data and subtables\n",
+    "    \n",
+    "    # Write additional data to the main workbook\n",
+    "    with pd.ExcelWriter(\"main_workbook.xlsx\", engine='openpyxl', mode='a') as writer:\n",
+    "        additional_df.to_excel(writer, sheet_name=sheet_name, startrow=0, index=False)\n",
+    "    \n",
+    "    # Write subtables below the additional data\n",
+    "    with pd.ExcelWriter(\"main_workbook.xlsx\", engine='openpyxl', mode='a') as writer:\n",
+    "        main_df.to_excel(writer, sheet_name=sheet_name, startrow=subtable_start_row, index=False)\n"
+   ]
   }
  ],
  "metadata": {
