--- a/subtablesexcel.ipynb
+++ b/subtablesexcel.ipynb
@@ -16,58 +16,74 @@
     }
    ],
    "source": [
+    "# split and combine\n",
     "from openpyxl import load_workbook\n",
+    "from openpyxl.utils import get_column_letter\n",
     "\n",
-    "# Load the workbook\n",
-    "workbook = load_workbook(\"sam.xlsx\")\n",
-    "\n",
-    "# Iterate through each sheet in the workbook\n",
-    "for sheet in workbook:\n",
-    "    # Find the index of the 'RT' column\n",
-    "    for col_idx in range(1, sheet.max_column + 1):\n",
-    "        if sheet.cell(row=1, column=col_idx).value == 'RT':\n",
-    "            rt_column_index = col_idx\n",
-    "            print(col_idx)\n",
-    "            break\n",
-    "\n",
-    "    # If 'RT' column found\n",
-    "    if rt_column_index:\n",
-    "        # Collect unique values from the 'RT' column\n",
-    "        unique_values = set(sheet.cell(row=row_idx, column=rt_column_index).value\n",
-    "                             for row_idx in range(2, sheet.max_row + 1))\n",
-    "\n",
-    "        # Create a list to store sub-tables\n",
-    "        sub_tables = []\n",
-    "        # Create sub-tables for each unique 'RT' value\n",
-    "        for rt_value in unique_values:\n",
-    "            sub_table = [['' for _ in range(sheet.max_column)] for _ in range(sheet.max_row)]  # Initialize sub-table\n",
+    "def split_workbook(input_workbook_path, sheets_to_split):\n",
+    "    # Load the input workbook\n",
+    "    input_workbook = load_workbook(input_workbook_path)\n",
+    "    \n",
+    "    for sheet_name in sheets_to_split:\n",
+    "        # Get the current sheet\n",
+    "        sheet = input_workbook[sheet_name]\n",
+    "        \n",
+    "        # Extract unique 'SF' values\n",
+    "        sf_values = set(sheet[get_column_letter(6)][2:].value)  # Assuming SF is in column F\n",
+    "        \n",
+    "        # Create a new workbook for each unique 'SF' value\n",
+    "        for sf_value in sf_values:\n",
+    "            # Create a new workbook\n",
+    "            output_workbook = Workbook()\n",
     "            \n",
-    "            # Copy headers from the main table\n",
-    "            for col_idx in range(1, sheet.max_column + 1):\n",
-    "                sub_table[0][col_idx - 1] = sheet.cell(row=1, column=col_idx).value\n",
+    "            # Copy the sheet to the new workbook based on 'SF' value\n",
+    "            for row in sheet.iter_rows(min_row=2, max_col=sheet.max_column, max_row=sheet.max_row):\n",
+    "                if row[5].value == sf_value:  # Assuming SF is in column F\n",
+    "                    output_sheet = output_workbook.create_sheet(title=sheet_name)\n",
+    "                    for cell in row:\n",
+    "                        output_sheet[cell.coordinate].value = cell.value\n",
+    "                        \n",
+    "            # Save the new workbook\n",
+    "            output_workbook.save(f\"{sf_value}_workbook.xlsx\")\n",
     "\n",
-    "            # Copy rows matching 'RT' value to sub-table\n",
-    "            sub_table_row_idx = 1\n",
-    "            for row_idx in range(2, sheet.max_row + 1):\n",
-    "                if sheet.cell(row=row_idx, column=rt_column_index).value == rt_value:\n",
-    "                    for col_idx in range(1, sheet.max_column + 1):\n",
-    "                        sub_table[sub_table_row_idx][col_idx - 1] = sheet.cell(row=row_idx, column=col_idx).value\n",
-    "                    sub_table_row_idx += 1\n",
-    "\n",
-    "            # Add sub-table to the list\n",
-    "            sub_tables.append(sub_table)\n",
-    "\n",
-    "        # Clear the original sheet\n",
-    "        sheet.delete_rows(1, sheet.max_row)\n",
-    "\n",
-    "        # Add sub-tables to the sheet\n",
-    "        for sub_table in sub_tables:\n",
-    "            for sub_row in sub_table:\n",
-    "                sheet.append(sub_row)\n",
+    "def combine_workbooks(input_workbook_paths, output_workbook_path):\n",
+    "    # Create a new workbook\n",
+    "    output_workbook = Workbook()\n",
+    "    \n",
+    "    for input_workbook_path in input_workbook_paths:\n",
+    "        # Load the input workbook\n",
+    "        input_workbook = load_workbook(input_workbook_path)\n",
+    "        \n",
+    "        for sheet_name in input_workbook.sheetnames:\n",
+    "            # Get the current sheet from the input workbook\n",
+    "            input_sheet = input_workbook[sheet_name]\n",
     "            \n",
+    "            # Get or create the corresponding sheet in the output workbook\n",
+    "            if sheet_name not in output_workbook.sheetnames:\n",
+    "                output_sheet = output_workbook.create_sheet(title=sheet_name)\n",
+    "            else:\n",
+    "                output_sheet = output_workbook[sheet_name]\n",
+    "                \n",
+    "            # Copy the data from the input sheet to the output sheet\n",
+    "            for row in input_sheet.iter_rows(values_only=True):\n",
+    "                output_sheet.append(row)\n",
+    "    \n",
+    "    # Save the combined workbook\n",
+    "    output_workbook.save(output_workbook_path)\n",
     "\n",
-    "# Save the modified workbook\n",
-    "workbook.save(\"modified_workbook.xlsx\")\n"
+    "# Specify the input workbook path and the sheets to split\n",
+    "input_workbook_path = \"input_workbook.xlsx\"\n",
+    "sheets_to_split = [\"Sheet1\", \"Sheet2\"]  # Add more sheet names as needed\n",
+    "\n",
+    "# Split the input workbook\n",
+    "split_workbook(input_workbook_path, sheets_to_split)\n",
+    "\n",
+    "# After manual processing, specify the paths of the split workbooks and the output workbook\n",
+    "input_workbook_paths = [\"sf1_workbook.xlsx\", \"sf2_workbook.xlsx\", ...]  # Specify the split workbook paths\n",
+    "output_workbook_path = \"combined_workbook.xlsx\"\n",
+    "\n",
+    "# Combine the split workbooks into one master workbook\n",
+    "combine_workbooks(input_workbook_paths, output_workbook_path)\n"
    ]
   },
   {
