--- a/subtablesexcel.ipynb
+++ b/subtablesexcel.ipynb
@@ -16,7 +16,6 @@
     }
    ],
    "source": [
-    "# split and combine\n",
     "from openpyxl import load_workbook\n",
     "from openpyxl.utils import get_column_letter\n",
     "\n",
@@ -29,7 +28,9 @@
     "        sheet = input_workbook[sheet_name]\n",
     "        \n",
     "        # Extract unique 'SF' values\n",
-    "        sf_values = set(sheet[get_column_letter(6)][2:].value)  # Assuming SF is in column F\n",
+    "        sf_values = set()\n",
+    "        for row in sheet.iter_rows(min_row=2, max_col=sheet.max_column, max_row=sheet.max_row):\n",
+    "            sf_values.add(row[5].value)  # Assuming SF is in column F\n",
     "        \n",
     "        # Create a new workbook for each unique 'SF' value\n",
     "        for sf_value in sf_values:\n",
@@ -46,44 +47,12 @@
     "            # Save the new workbook\n",
     "            output_workbook.save(f\"{sf_value}_workbook.xlsx\")\n",
     "\n",
-    "def combine_workbooks(input_workbook_paths, output_workbook_path):\n",
-    "    # Create a new workbook\n",
-    "    output_workbook = Workbook()\n",
-    "    \n",
-    "    for input_workbook_path in input_workbook_paths:\n",
-    "        # Load the input workbook\n",
-    "        input_workbook = load_workbook(input_workbook_path)\n",
-    "        \n",
-    "        for sheet_name in input_workbook.sheetnames:\n",
-    "            # Get the current sheet from the input workbook\n",
-    "            input_sheet = input_workbook[sheet_name]\n",
-    "            \n",
-    "            # Get or create the corresponding sheet in the output workbook\n",
-    "            if sheet_name not in output_workbook.sheetnames:\n",
-    "                output_sheet = output_workbook.create_sheet(title=sheet_name)\n",
-    "            else:\n",
-    "                output_sheet = output_workbook[sheet_name]\n",
-    "                \n",
-    "            # Copy the data from the input sheet to the output sheet\n",
-    "            for row in input_sheet.iter_rows(values_only=True):\n",
-    "                output_sheet.append(row)\n",
-    "    \n",
-    "    # Save the combined workbook\n",
-    "    output_workbook.save(output_workbook_path)\n",
-    "\n",
     "# Specify the input workbook path and the sheets to split\n",
     "input_workbook_path = \"input_workbook.xlsx\"\n",
     "sheets_to_split = [\"Sheet1\", \"Sheet2\"]  # Add more sheet names as needed\n",
     "\n",
     "# Split the input workbook\n",
-    "split_workbook(input_workbook_path, sheets_to_split)\n",
-    "\n",
-    "# After manual processing, specify the paths of the split workbooks and the output workbook\n",
-    "input_workbook_paths = [\"sf1_workbook.xlsx\", \"sf2_workbook.xlsx\", ...]  # Specify the split workbook paths\n",
-    "output_workbook_path = \"combined_workbook.xlsx\"\n",
-    "\n",
-    "# Combine the split workbooks into one master workbook\n",
-    "combine_workbooks(input_workbook_paths, output_workbook_path)\n"
+    "split_workbook(input_workbook_path, sheets_to_split)\n"
    ]
   },
   {
