--- a/subtablesexcel.ipynb
+++ b/subtablesexcel.ipynb
@@ -19,40 +19,53 @@
     "from openpyxl import load_workbook\n",
     "from openpyxl.utils import get_column_letter\n",
     "\n",
-    "def split_workbook(input_workbook_path, sheets_to_split):\n",
-    "    # Load the input workbook\n",
-    "    input_workbook = load_workbook(input_workbook_path)\n",
-    "    \n",
-    "    for sheet_name in sheets_to_split:\n",
-    "        # Get the current sheet\n",
-    "        sheet = input_workbook[sheet_name]\n",
-    "        \n",
+    "# Load the original workbook\n",
+    "workbook = load_workbook('original_workbook.xlsx')\n",
+    "\n",
+    "# Sheets to be processed\n",
+    "sheets_to_process = ['Sheet1', 'Sheet2', 'Sheet3']  # Update with your sheet names\n",
+    "\n",
+    "# Iterate through the sheets\n",
+    "for sheet_name in sheets_to_process:\n",
+    "    sheet = workbook[sheet_name]\n",
+    "\n",
+    "    # Find the index of the 'SF' column\n",
+    "    sf_column_index = None\n",
+    "    for col_idx in range(1, sheet.max_column + 1):\n",
+    "        if sheet.cell(row=1, column=col_idx).value == 'SF':\n",
+    "            sf_column_index = col_idx\n",
+    "            break\n",
+    "\n",
+    "    if sf_column_index:\n",
     "        # Extract unique 'SF' values\n",
     "        sf_values = set()\n",
-    "        for row in sheet.iter_rows(min_row=2, max_col=sheet.max_column, max_row=sheet.max_row):\n",
-    "            sf_values.add(row[5].value)  # Assuming SF is in column F\n",
-    "        \n",
-    "        # Create a new workbook for each unique 'SF' value\n",
+    "        for row_idx in range(2, sheet.max_row + 1):\n",
+    "            # Read the value instead of the formula\n",
+    "            sf_values.add(sheet.cell(row=row_idx, column=sf_column_index).value)\n",
+    "\n",
+    "        # Split the sheet based on unique 'SF' values\n",
     "        for sf_value in sf_values:\n",
     "            # Create a new workbook\n",
-    "            output_workbook = Workbook()\n",
-    "            \n",
-    "            # Copy the sheet to the new workbook based on 'SF' value\n",
-    "            for row in sheet.iter_rows(min_row=2, max_col=sheet.max_column, max_row=sheet.max_row):\n",
-    "                if row[5].value == sf_value:  # Assuming SF is in column F\n",
-    "                    output_sheet = output_workbook.create_sheet(title=sheet_name)\n",
-    "                    for cell in row:\n",
-    "                        output_sheet[cell.coordinate].value = cell.value\n",
-    "                        \n",
-    "            # Save the new workbook\n",
-    "            output_workbook.save(f\"{sf_value}_workbook.xlsx\")\n",
+    "            new_workbook = Workbook()\n",
+    "            new_sheet = new_workbook.active\n",
     "\n",
-    "# Specify the input workbook path and the sheets to split\n",
-    "input_workbook_path = \"input_workbook.xlsx\"\n",
-    "sheets_to_split = [\"Sheet1\", \"Sheet2\"]  # Add more sheet names as needed\n",
+    "            # Iterate through original sheet and copy rows with matching 'SF' value\n",
+    "            for row_idx in range(1, sheet.max_row + 1):\n",
+    "                # Read the value instead of the formula\n",
+    "                if sheet.cell(row=row_idx, column=sf_column_index).value == sf_value:\n",
+    "                    # Copy the entire row to the new sheet\n",
+    "                    for col_idx in range(1, sheet.max_column + 1):\n",
+    "                        new_sheet.cell(row=row_idx, column=col_idx).value = \\\n",
+    "                            sheet.cell(row=row_idx, column=col_idx).value\n",
     "\n",
-    "# Split the input workbook\n",
-    "split_workbook(input_workbook_path, sheets_to_split)\n"
+    "            # Save the new workbook with the specific 'SF' value\n",
+    "            new_workbook.save(f'{sheet_name}_{sf_value}.xlsx')\n",
+    "\n",
+    "# Perform manual processing/changes on the separated workbooks\n",
+    "\n",
+    "# Combine the processed data into a single master workbook\n",
+    "\n",
+    "# Save the master workbook\n"
    ]
   },
   {
