--- a/subtablesexcel.ipynb
+++ b/subtablesexcel.ipynb
@@ -70,6 +70,45 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "2406f22a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from openpyxl import load_workbook\n",
+    "\n",
+    "# Function to split sheets based on unique values of 'SF' column\n",
+    "def split_sheets(input_file, output_folder, sheets):\n",
+    "    for sheet_name in sheets:\n",
+    "        # Load sheet data\n",
+    "        df = pd.read_excel(input_file, sheet_name=sheet_name)\n",
+    "        \n",
+    "        # Convert 'SF' column to text type\n",
+    "        df['SF'] = df['SF'].astype(str)\n",
+    "        \n",
+    "        # Fetch unique values of 'SF'\n",
+    "        unique_sf_values = df['SF'].unique()\n",
+    "        \n",
+    "        # Create a new workbook for each unique 'SF' value\n",
+    "        for sf_value in unique_sf_values:\n",
+    "            # Filter sheet data based on 'SF' value\n",
+    "            filtered_df = df[df['SF'] == sf_value]\n",
+    "            \n",
+    "            # Write filtered data to a new workbook\n",
+    "            output_file = f\"{output_folder}/{sheet_name}_{sf_value}.xlsx\"\n",
+    "            with pd.ExcelWriter(output_file, engine='openpyxl') as writer:\n",
+    "                filtered_df.to_excel(writer, index=False, sheet_name=sheet_name)\n",
+    "\n",
+    "# Example usage\n",
+    "input_file = 'input_workbook.xlsx'\n",
+    "output_folder = 'output_workbooks'\n",
+    "sheets_to_process = ['Sheet1', 'Sheet2']  # List of sheet names to process\n",
+    "split_sheets(input_file, output_folder, sheets_to_process)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 110,
    "id": "f5529bbe",
    "metadata": {},
