--- a/subtablesexcel.ipynb
+++ b/subtablesexcel.ipynb
@@ -16,62 +16,49 @@
     }
    ],
    "source": [
-    "from openpyxl import load_workbook\n",
-    "from openpyxl.utils import get_column_letter\n",
+    "import pandas as pd\n",
+    "from datetime import datetime\n",
+    "from openpyxl import Workbook\n",
     "\n",
-    "# Load the original workbook\n",
-    "workbook = load_workbook('original_workbook.xlsx')\n",
+    "# Function to read files, concatenate dataframes, sort by date, and write to a new workbook\n",
+    "def combine_workbooks(files_list, output_file):\n",
+    "    combined_df = pd.DataFrame()\n",
+    "    \n",
+    "    for file_name in files_list:\n",
+    "        df = pd.read_excel(file_name)\n",
+    "        combined_df = pd.concat([combined_df, df], ignore_index=True)\n",
+    "    \n",
+    "    # Sort by date column\n",
+    "    combined_df['Date'] = pd.to_datetime(combined_df['Date'])\n",
+    "    combined_df = combined_df.sort_values(by='Date')\n",
+    "    \n",
+    "    # Format date column as MM/DD/YYYY\n",
+    "    combined_df['Date'] = combined_df['Date'].dt.strftime('%m/%d/%Y')\n",
+    "    \n",
+    "    # Write data to a new workbook\n",
+    "    with pd.ExcelWriter(output_file, engine='openpyxl') as writer:\n",
+    "        combined_df.to_excel(writer, index=False, sheet_name='CombinedSheet')\n",
     "\n",
-    "# Sheets to be processed\n",
-    "sheets_to_process = ['Sheet1', 'Sheet2', 'Sheet3']  # Update with your sheet names\n",
+    "# List of files with '$' in their names\n",
+    "dollar_files = ['output_workbooks/sheet1_$1.xlsx', 'output_workbooks/sheet1_$2.xlsx', 'output_workbooks/sheet2_$1.xlsx']\n",
     "\n",
-    "# Iterate through the sheets\n",
-    "for sheet_name in sheets_to_process:\n",
-    "    sheet = workbook[sheet_name]\n",
+    "# List of files with '#' in their names\n",
+    "hash_files = ['output_workbooks/sheet1_#1.xlsx', 'output_workbooks/sheet1_#2.xlsx', 'output_workbooks/sheet2_#1.xlsx']\n",
     "\n",
-    "    # Find the index of the 'SF' column\n",
-    "    sf_column_index = None\n",
-    "    for col_idx in range(1, sheet.max_column + 1):\n",
-    "        if sheet.cell(row=1, column=col_idx).value == 'SF':\n",
-    "            sf_column_index = col_idx\n",
-    "            break\n",
+    "# Output file name for combined workbook\n",
+    "output_file = 'combined_workbook.xlsx'\n",
     "\n",
-    "    if sf_column_index:\n",
-    "        # Extract unique 'SF' values\n",
-    "        sf_values = set()\n",
-    "        for row_idx in range(2, sheet.max_row + 1):\n",
-    "            # Read the value instead of the formula\n",
-    "            sf_values.add(sheet.cell(row=row_idx, column=sf_column_index).value)\n",
+    "# Combine workbooks with '$' in their names\n",
+    "combine_workbooks(dollar_files, output_file)\n",
     "\n",
-    "        # Split the sheet based on unique 'SF' values\n",
-    "        for sf_value in sf_values:\n",
-    "            # Create a new workbook\n",
-    "            new_workbook = Workbook()\n",
-    "            new_sheet = new_workbook.active\n",
-    "\n",
-    "            # Iterate through original sheet and copy rows with matching 'SF' value\n",
-    "            for row_idx in range(1, sheet.max_row + 1):\n",
-    "                # Read the value instead of the formula\n",
-    "                if sheet.cell(row=row_idx, column=sf_column_index).value == sf_value:\n",
-    "                    # Copy the entire row to the new sheet\n",
-    "                    for col_idx in range(1, sheet.max_column + 1):\n",
-    "                        new_sheet.cell(row=row_idx, column=col_idx).value = \\\n",
-    "                            sheet.cell(row=row_idx, column=col_idx).value\n",
-    "\n",
-    "            # Save the new workbook with the specific 'SF' value\n",
-    "            new_workbook.save(f'{sheet_name}_{sf_value}.xlsx')\n",
-    "\n",
-    "# Perform manual processing/changes on the separated workbooks\n",
-    "\n",
-    "# Combine the processed data into a single master workbook\n",
-    "\n",
-    "# Save the master workbook\n"
+    "# Combine workbooks with '#' in their names\n",
+    "combine_workbooks(hash_files, output_file)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2406f22a",
+   "id": "c0b48b6a",
    "metadata": {},
    "outputs": [],
    "source": [
