--- a/subtablesexcel.ipynb
+++ b/subtablesexcel.ipynb
@@ -16,11 +16,31 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "from datetime import datetime\n",
-    "from openpyxl import Workbook\n",
+    "import os\n",
     "\n",
-    "# Function to read files, concatenate dataframes, sort by date, and write to a new workbook\n",
+    "# Function to filter filenames based on presence of '$' or '#'\n",
+    "def filter_filenames(folder_path):\n",
+    "    dollar_files = []\n",
+    "    hash_files = []\n",
+    "    \n",
+    "    for file_name in os.listdir(folder_path):\n",
+    "        if '$' in file_name:\n",
+    "            dollar_files.append(os.path.join(folder_path, file_name))\n",
+    "        elif '#' in file_name:\n",
+    "            hash_files.append(os.path.join(folder_path, file_name))\n",
+    "    \n",
+    "    return dollar_files, hash_files\n",
+    "\n",
+    "# Folder path containing the files\n",
+    "folder_path = 'output_workbooks/'\n",
+    "\n",
+    "# Get lists of filenames with '$' and '#' in their names\n",
+    "dollar_files, hash_files = filter_filenames(folder_path)\n",
+    "\n",
+    "# Output file name for combined workbook\n",
+    "output_file = 'combined_workbook.xlsx'\n",
+    "\n",
+    "# Function to combine workbooks\n",
     "def combine_workbooks(files_list, output_file):\n",
     "    combined_df = pd.DataFrame()\n",
     "    \n",
@@ -39,15 +59,6 @@
     "    with pd.ExcelWriter(output_file, engine='openpyxl') as writer:\n",
     "        combined_df.to_excel(writer, index=False, sheet_name='CombinedSheet')\n",
     "\n",
-    "# List of files with '$' in their names\n",
-    "dollar_files = ['output_workbooks/sheet1_$1.xlsx', 'output_workbooks/sheet1_$2.xlsx', 'output_workbooks/sheet2_$1.xlsx']\n",
-    "\n",
-    "# List of files with '#' in their names\n",
-    "hash_files = ['output_workbooks/sheet1_#1.xlsx', 'output_workbooks/sheet1_#2.xlsx', 'output_workbooks/sheet2_#1.xlsx']\n",
-    "\n",
-    "# Output file name for combined workbook\n",
-    "output_file = 'combined_workbook.xlsx'\n",
-    "\n",
     "# Combine workbooks with '$' in their names\n",
     "combine_workbooks(dollar_files, output_file)\n",
     "\n",
@@ -58,7 +69,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c0b48b6a",
+   "id": "99dd9bcc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c47fa0ee",
    "metadata": {},
    "outputs": [],
    "source": [
