--- a/subtablesexcel.ipynb
+++ b/subtablesexcel.ipynb
@@ -17,59 +17,62 @@
    ],
    "source": [
     "import os\n",
+    "from openpyxl import load_workbook, Workbook\n",
+    "from openpyxl.utils import get_column_letter\n",
+    "from openpyxl.styles import NamedStyle\n",
+    "from datetime import datetime\n",
     "\n",
-    "# Function to filter filenames based on presence of '$' or '#'\n",
-    "def filter_filenames(folder_path):\n",
-    "    dollar_files = []\n",
-    "    hash_files = []\n",
-    "    \n",
-    "    for file_name in os.listdir(folder_path):\n",
-    "        if '$' in file_name:\n",
-    "            dollar_files.append(os.path.join(folder_path, file_name))\n",
-    "        elif '#' in file_name:\n",
-    "            hash_files.append(os.path.join(folder_path, file_name))\n",
-    "    \n",
-    "    return dollar_files, hash_files\n",
+    "# Function to convert date format from MM/DD/YYYY to MM-DD-YYYY\n",
+    "def convert_date_format(date_str):\n",
+    "    date_obj = datetime.strptime(date_str, \"%m/%d/%Y\")\n",
+    "    return date_obj.strftime(\"%m-%d-%Y\")\n",
     "\n",
-    "# Folder path containing the files\n",
-    "folder_path = 'output_workbooks/'\n",
+    "# Path to the folder containing the files\n",
+    "folder_path = 'path/to/your/folder'\n",
     "\n",
-    "# Get lists of filenames with '$' and '#' in their names\n",
-    "dollar_files, hash_files = filter_filenames(folder_path)\n",
+    "# Get the list of all files in the folder\n",
+    "file_names = os.listdir(folder_path)\n",
     "\n",
-    "# Output file name for combined workbook\n",
-    "output_file = 'combined_workbook.xlsx'\n",
+    "# Separate files with '#' and '$' in their names\n",
+    "hash_files = [os.path.join(folder_path, file_name) for file_name in file_names if '#' in file_name]\n",
+    "dollar_files = [os.path.join(folder_path, file_name) for file_name in file_names if '$' in file_name]\n",
     "\n",
-    "# Function to combine workbooks\n",
-    "def combine_workbooks(files_list, output_file):\n",
-    "    combined_df = pd.DataFrame()\n",
-    "    \n",
-    "    for file_name in files_list:\n",
-    "        df = pd.read_excel(file_name)\n",
-    "        combined_df = pd.concat([combined_df, df], ignore_index=True)\n",
-    "    \n",
-    "    # Sort by date column\n",
-    "    combined_df['Date'] = pd.to_datetime(combined_df['Date'])\n",
-    "    combined_df = combined_df.sort_values(by='Date')\n",
-    "    \n",
-    "    # Format date column as MM/DD/YYYY\n",
-    "    combined_df['Date'] = combined_df['Date'].dt.strftime('%m/%d/%Y')\n",
-    "    \n",
-    "    # Write data to a new workbook\n",
-    "    with pd.ExcelWriter(output_file, engine='openpyxl') as writer:\n",
-    "        combined_df.to_excel(writer, index=False, sheet_name='CombinedSheet')\n",
+    "# Create a new workbook\n",
+    "combined_workbook = Workbook()\n",
     "\n",
-    "# Combine workbooks with '$' in their names\n",
-    "combine_workbooks(dollar_files, output_file)\n",
+    "# Create a style for the date column\n",
+    "date_style = NamedStyle(name='date_style', number_format='MM-DD-YYYY')\n",
+    "combined_workbook.add_named_style(date_style)\n",
     "\n",
-    "# Combine workbooks with '#' in their names\n",
-    "combine_workbooks(hash_files, output_file)\n"
+    "# Function to combine files into a sheet\n",
+    "def combine_files_into_sheet(files, sheet_name):\n",
+    "    combined_sheet = combined_workbook.create_sheet(title=sheet_name)\n",
+    "    for file_path in files:\n",
+    "        workbook = load_workbook(file_path, data_only=True)\n",
+    "        sheet = workbook.active\n",
+    "        for row_idx, row in enumerate(sheet.iter_rows(values_only=True), start=1):\n",
+    "            for col_idx, value in enumerate(row, start=1):\n",
+    "                if col_idx == 1 and isinstance(value, str):\n",
+    "                    value = convert_date_format(value)\n",
+    "                combined_sheet.cell(row=row_idx, column=col_idx, value=value)\n",
+    "                # Apply date format to the first column\n",
+    "                if col_idx == 1:\n",
+    "                    combined_sheet.cell(row=row_idx, column=col_idx).style = 'date_style'\n",
+    "\n",
+    "# Combine hash files into a sheet\n",
+    "combine_files_into_sheet(hash_files, 'Sheet(#)')\n",
+    "\n",
+    "# Combine dollar files into a sheet\n",
+    "combine_files_into_sheet(dollar_files, 'Sheet($)')\n",
+    "\n",
+    "# Save the combined workbook\n",
+    "combined_workbook.save('combined_workbook.xlsx')\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99dd9bcc",
+   "id": "1314130e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -77,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c47fa0ee",
+   "id": "fab597dc",
    "metadata": {},
    "outputs": [],
    "source": [
