--- a/subtablesexcel.ipynb
+++ b/subtablesexcel.ipynb
@@ -72,15 +72,47 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1314130e",
+   "id": "a54bbb20",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import openpyxl\n",
+    "from openpyxl.styles import PatternFill, Font\n",
+    "from openpyxl.utils import get_column_letter\n",
+    "\n",
+    "# Function to apply formatting to a worksheet\n",
+    "def apply_formatting(ws):\n",
+    "    # Make the first row bold\n",
+    "    for cell in ws[1]:\n",
+    "        cell.font = Font(bold=True)\n",
+    "\n",
+    "    # Set background color 'blue' with font color 'white' for columns M to T in the first row\n",
+    "    for col_idx in range(13, 21):  # Columns M to T\n",
+    "        cell = ws.cell(row=1, column=col_idx)\n",
+    "        cell.fill = PatternFill(start_color=\"000080\", end_color=\"000080\", fill_type=\"solid\")\n",
+    "        cell.font = Font(color=\"FFFFFF\")\n",
+    "\n",
+    "    # Set light blue background color for all rows in columns M to T\n",
+    "    for row in ws.iter_rows(min_row=2, min_col=13, max_col=20):\n",
+    "        for cell in row:\n",
+    "            cell.fill = PatternFill(start_color=\"ADD8E6\", end_color=\"ADD8E6\", fill_type=\"solid\")\n",
+    "\n",
+    "# Open the combined workbook\n",
+    "wb = openpyxl.load_workbook('combined_workbook.xlsx')\n",
+    "\n",
+    "# Apply formatting to all sheets\n",
+    "for sheet_name in wb.sheetnames:\n",
+    "    ws = wb[sheet_name]\n",
+    "    apply_formatting(ws)\n",
+    "\n",
+    "# Save the modified workbook\n",
+    "wb.save('combined_workbook_formatted.xlsx')\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fab597dc",
+   "id": "69d37cf5",
    "metadata": {},
    "outputs": [],
    "source": [
