--- a/subtablesexcel.ipynb
+++ b/subtablesexcel.ipynb
@@ -72,13 +72,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a54bbb20",
+   "id": "e93502ee",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import openpyxl\n",
+    "from openpyxl import load_workbook\n",
     "from openpyxl.styles import PatternFill, Font\n",
-    "from openpyxl.utils import get_column_letter\n",
     "\n",
     "# Function to apply formatting to a worksheet\n",
     "def apply_formatting(ws):\n",
@@ -87,8 +86,8 @@
     "        cell.font = Font(bold=True)\n",
     "\n",
     "    # Set background color 'blue' with font color 'white' for columns M to T in the first row\n",
-    "    for col_idx in range(13, 21):  # Columns M to T\n",
-    "        cell = ws.cell(row=1, column=col_idx)\n",
+    "    range_to_format = 'M1:T1'\n",
+    "    for cell in ws[range_to_format]:\n",
     "        cell.fill = PatternFill(start_color=\"000080\", end_color=\"000080\", fill_type=\"solid\")\n",
     "        cell.font = Font(color=\"FFFFFF\")\n",
     "\n",
@@ -97,22 +96,22 @@
     "        for cell in row:\n",
     "            cell.fill = PatternFill(start_color=\"ADD8E6\", end_color=\"ADD8E6\", fill_type=\"solid\")\n",
     "\n",
-    "# Open the combined workbook\n",
-    "wb = openpyxl.load_workbook('combined_workbook.xlsx')\n",
+    "# Load the combined workbook\n",
+    "combined_workbook = load_workbook('combined_workbook.xlsx')\n",
     "\n",
-    "# Apply formatting to all sheets\n",
-    "for sheet_name in wb.sheetnames:\n",
-    "    ws = wb[sheet_name]\n",
+    "# Apply formatting to each sheet in the combined workbook\n",
+    "for sheet in combined_workbook.sheetnames:\n",
+    "    ws = combined_workbook[sheet]\n",
     "    apply_formatting(ws)\n",
     "\n",
-    "# Save the modified workbook\n",
-    "wb.save('combined_workbook_formatted.xlsx')\n"
+    "# Save the modified combined workbook\n",
+    "combined_workbook.save('combined_workbook_formatted.xlsx')\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69d37cf5",
+   "id": "47a51887",
    "metadata": {},
    "outputs": [],
    "source": [
