--- a/subtablesexcel.ipynb
+++ b/subtablesexcel.ipynb
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e93502ee",
+   "id": "35cc39ff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,14 +86,15 @@
     "        cell.font = Font(bold=True)\n",
     "\n",
     "    # Set background color 'blue' with font color 'white' for columns M to T in the first row\n",
-    "    range_to_format = 'M1:T1'\n",
-    "    for cell in ws[range_to_format]:\n",
+    "    for col in range(13, 21):  # Columns M to T\n",
+    "        cell = ws.cell(row=1, column=col)\n",
     "        cell.fill = PatternFill(start_color=\"000080\", end_color=\"000080\", fill_type=\"solid\")\n",
     "        cell.font = Font(color=\"FFFFFF\")\n",
     "\n",
     "    # Set light blue background color for all rows in columns M to T\n",
-    "    for row in ws.iter_rows(min_row=2, min_col=13, max_col=20):\n",
-    "        for cell in row:\n",
+    "    for row in range(2, ws.max_row + 1):\n",
+    "        for col in range(13, 21):  # Columns M to T\n",
+    "            cell = ws.cell(row=row, column=col)\n",
     "            cell.fill = PatternFill(start_color=\"ADD8E6\", end_color=\"ADD8E6\", fill_type=\"solid\")\n",
     "\n",
     "# Load the combined workbook\n",
@@ -111,7 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47a51887",
+   "id": "c9cad8a7",
    "metadata": {},
    "outputs": [],
    "source": [
